--- a/sbsv2/raptor/RELEASE-NOTES.html
+++ b/sbsv2/raptor/RELEASE-NOTES.html
@@ -1,16 +1,32 @@
-Release Notes for Symbian Build System v2
+<html>
+<head>
+<title>Release Notes for Symbian Build System v2</title>
+</head>
+<body>
 
-next version
+<h1>Release Notes for Symbian Build System v2</h1>
 
-New Features:
-- Add support for FEATUREVARIANTSAFE in BV builds.
-- Add support for Cygwin 1.7.
-- New support for cross-compiling win32 tools on Linux.  
-  To enable it, use "sbs -c tools2.win32 -c tools2" on Linux
-- New prototype support for reading System Definition v3 files
-- Add support for MMP keyword EPOCNESTEDEXCEPTIONS.
+<h2>version 2.13.0</h2>
 
+<h3>New Features</h3>
+<ul>
 
+<li><a href="notes/featurevariantsafe.txt">    Support for FEATUREVARIANTSAFE in BV builds              </a>
+<li><a href="notes/cygwin_1_7.txt">            Support for Cygwin 1.7                                   </a>
+<li><a href="notes/cross_compiling_tools.txt"> Support for cross-compiling win32 tools on Linux         </a>
+<li><a href="notes/system_definition_v3.txt">  Prototype support for reading System Definition v3 files </a>
+<li><a href="notes/epocnestedexceptions.txt">  New MMP keyword EPOCNESTEDEXCEPTIONS                     </a>
+
+</ul>
+
+<h3>Defect Fixes</h3>
+<ul>
+
+<li>to be integrated
+
+</ul>
+
+<pre>
 version 2.12.5
 
 Defect Fixes:
@@ -853,3 +869,6 @@ version 2.0.6
 
 The first release of SBSv2 in the SITK.
 
+</pre>
+</body>
+</html>
