--- a/sbsv2/raptor/RELEASE-NOTES.html
+++ b/sbsv2/raptor/RELEASE-NOTES.html
@@ -11,26 +11,28 @@
 <h3>New Features</h3>
 <ul>
 
-<li><a href="notes/featurevariantsafe.txt">    Support for FEATUREVARIANTSAFE in BV builds              </a>
-<li><a href="notes/cygwin_1_7.txt">            Support for Cygwin 1.7                                   </a>
-<li><a href="notes/cross_compiling_tools.txt"> Support for cross-compiling win32 tools on Linux         </a>
-<li><a href="notes/system_definition_v3.txt">  Prototype support for reading System Definition v3 files </a>
-<li><a href="notes/epocnestedexceptions.txt">  New MMP keyword EPOCNESTEDEXCEPTIONS                     </a>
+<li><a href="notes/featurevariantsafe.txt">    Support for FEATUREVARIANTSAFE in BV builds              </a></li>
+<li><a href="notes/cygwin_1_7.txt">            Support for Cygwin 1.7                                   </a></li>
+<li><a href="notes/cross_compiling_tools.txt"> Support for cross-compiling win32 tools on Linux         </a></li>
+<li><a href="notes/system_definition_v3.txt">  Prototype support for reading System Definition v3 files </a></li>
+<li><a href="notes/epocnestedexceptions.txt">  New MMP keyword EPOCNESTEDEXCEPTIONS                     </a></li>
 
 </ul>
 
 <h3>Defect Fixes</h3>
 <ul>
 
-<li>to be integrated
+<li>to be integrated</li>
 
 </ul>
 
+<!-- older notes are plain text -->
 <pre>
 version 2.12.5
 
 Defect Fixes:
 - Fix: Workaround for emake engine log corruption when clockskew errors occur (annofile2log). 
+
   Allow Raptor to obtain log from emake annotation file where it is uncorrupted.  A new 
   Make engine option "copyannofile2log" enables/disables this mode for emake. If this option is disabled
   or if no annotation file is specified for the build then Raptor reads logs directly as normal.
@@ -77,7 +79,7 @@ Defect Fixes:
 - sbs_filter chose wrong embedded default python version. Set to 2.6.4 now.
 - FilterCheck did not check files when run from sbs_filter
 - Remove old references to python 2.5.2
-- Escape filenames with special XML characters inside <member> tags
+- Escape filenames with special XML characters inside &lt;member&gt; tags
 
 
 version 2.12.1
@@ -314,7 +316,7 @@ DPDEF135436 SBSv2 - Python traceback when illegal characters appear on command l
 INC140156 SBSv2 crashes when build QtWebkit for ARMV5
 
 Other Changes:
-Add <info> to show which variant.hrh file is used.
+Add &lt;info&gt; to show which variant.hrh file is used.
 Replaced the corrupted awk.exe in cygwin distro.
 Fix previous trace compiler auto run mechanism.
 ROMFILE improvements.
@@ -622,7 +624,7 @@ version 2.2.5
 Defect Fixes:
 DEF127329 OMAP H4 Unistore2 Failure in Raptor 9.5 GT build
 DPDEF128632 SBSv2 : bld.inf ':zip' exports don't maintain timestamps, with an e32 impact
-DPDEF127399 SBSv2 -p <filename>.mmp options also builds .mk files
+DPDEF127399 SBSv2 -p [filename].mmp options also builds .mk files
 
 
 version 2.2.4
@@ -673,7 +675,7 @@ DS.1348 SBSv2 allow mixed slashes
 
 Defect Fixes:
 DPDEF127904	SBSv2 : recent installdefaultcommdb has broken the 9.4 build
-DPDEF128022	SBSv2: Unrecognised Keyword ['romtarget  <some_file>.dll'] warnings
+DPDEF128022	SBSv2: Unrecognised Keyword ['romtarget  some_file.dll'] warnings
 DPDEF127815	SBSv2: PAGED and EPOCCALLDLLENTRYPOINTS keywords not supported
 DPDEF127890	SBSv2:  TARGETPATH in mmps (also resources, bitmaps) must cope with backslashes
 DPDEF128229 SBSv2: some command invocations can fail, but could be "re-tried"
