--- a/sbsv2/raptor/RELEASE-NOTES.html
+++ b/sbsv2/raptor/RELEASE-NOTES.html
@@ -7,12 +7,14 @@
 <h1>Release Notes for Symbian Build System v2</h1>
 
 <h2>next version</h2>
+
+<h3> New Features</h3>
 <ul>
 
+<li><a href="notes/parametric_log_filters.txt">   Pass parameters to log filters from the command line </a></li>
 <li><a href="notes/delete_on_failed_compile.txt"> Work-around for failed RVCT 2.2 compiles             </a></li>
 
 </ul>
-
 
 
 <h2>version 2.13.0</h2>
