--- a/sbsv2/raptor/RELEASE-NOTES.html
+++ b/sbsv2/raptor/RELEASE-NOTES.html
@@ -6,6 +6,15 @@
 
 <h1>Release Notes for Symbian Build System v2</h1>
 
+<h2>next version</h2>
+
+<h3>Defect Fixes</h3>
+<ul>
+
+<li><a href="http://developer.symbian.org/bugs/show_bug.cgi?id=2297"> SF Bug 2297 </a> Python exception in raptor_meta.py when processing bld.inf file </li>
+
+</ul>
+
 <h2>version 2.13.0</h2>
 
 <h3>New Features</h3>
