--- a/sbsv2/raptor/RELEASE-NOTES.html
+++ b/sbsv2/raptor/RELEASE-NOTES.html
@@ -33,6 +33,7 @@
 <li>                                                                  DPDEF144648      - Raptor failed to build tools_deb objects under Windows XP                                                            </li>
 <li><a href="http://developer.symbian.org/bugs/show_bug.cgi?id=2134"> SF Bug 2134 </a> - [Raptor] Raptor does not pass overridden make variables into its makefiles                                           </li>
 <li>                                                                  Fix : do not allow data to be paged implicitly                                                                                          </li>
+<li>                                                                  Fix : sort build configurations by name for metadata preprocessing                                                                      </li>
 
 </ul>
 
