Fix : ensure that FLMDEBUG is empty by default

--- a/sbsv2/raptor/RELEASE-NOTES.html
+++ b/sbsv2/raptor/RELEASE-NOTES.html
@@ -35,6 +35,7 @@
 <li>                                                                  Fix : do not allow data to be paged implicitly                                                                                          </li>
 <li>                                                                  Fix : sort build configurations by name for metadata preprocessing                                                                      </li>
 <li><a href="http://developer.symbian.org/bugs/show_bug.cgi?id=2302"> SF Bug 2302 </a> - sbs_filter refers to python.exe in win32/python264/                                                                  </li>
+<li>                                                                  Fix : ensure that FLMDEBUG is empty by default                                                                                          </li>
 
 </ul>
 
