fix performance: copy resources in the frontend. Helps cluster builds since remote copying is inefficient.
--HG--
branch : fix

--- a/sbsv2/raptor/RELEASE-NOTES.html
+++ b/sbsv2/raptor/RELEASE-NOTES.html
@@ -12,6 +12,7 @@
 <ul>
 
 <li><a href="http://developer.symbian.org/bugs/show_bug.cgi?id=2297"> SF Bug 2297 </a> Python exception in raptor_meta.py when processing bld.inf file </li>
+<li><a href="notes/localresourcecopying.txt">    fix performance: for cluster builds: do resource copying on local host.            </a></li>
 
 </ul>
 
