--- a/sbsv2/raptor/RELEASE-NOTES.html
+++ b/sbsv2/raptor/RELEASE-NOTES.html
@@ -16,6 +16,20 @@
 
 </ul>
 
+<h2>Next version</h2>
+
+<h3>New Features</h3>
+<ul>
+<li>                                           Turn OST_TRACE_COMPILER_IN_USE macro on automatically so that the TCom doesn't need to.  </a></li>
+<li><a href="notes/tcomsupport.txt">           Support new Trace Compiler commandline interface, autogen header location   </a></li>
+</ul
+<h3>Defect Fixes</h3>
+<ul>
+<li>                                           Fix: ensure trace paths exist before build starts to avoid clashes during the build with some make engines    </a></li>
+<li>                                           Fix: permit traces path to be specified in systemincludes - helps Qt    </a></li>
+</ul>
+
+
 <h2>version 2.13.0</h2>
 
 <h3>New Features</h3>
