Fix for SF Bug 2562[Raptor]adds incorrect entries into .iby files w.r.t file paths
--HG--
branch : fix

--- a/sbsv2/raptor/RELEASE-NOTES.html
+++ b/sbsv2/raptor/RELEASE-NOTES.html
@@ -11,6 +11,7 @@
 <h3>Defect Fixes</h3>
 <ul>
 <li><a href="http://developer.symbian.org/bugs/show_bug.cgi?id=2561"> SF Bug 2561 </a> - [Raptor] creates incorrect .iby files w.r.t target file versions &amp; ramtargets</li>
+<li><a href="http://developer.symbian.org/bugs/show_bug.cgi?id=2562"> SF Bug 2562 </a> - [Raptor] adds incorrect entries into .iby files w.r.t file paths</li>
 </ul>
 
 <h2>version 2.14.0</h2>
