--- a/sbsv2/raptor/RELEASE-NOTES.html
+++ b/sbsv2/raptor/RELEASE-NOTES.html
@@ -10,6 +10,7 @@
 
 <h3>Defect Fixes</h3>
 <ul>
+<li>Fix : tracecompiler.mk caused poor makefile parse performance due to use of $(shell)</li>
 <li><a href="http://developer.symbian.org/bugs/show_bug.cgi?id=2561"> SF Bug 2561 </a> - [Raptor] creates incorrect .iby files w.r.t target file versions &amp; ramtargets</li>
 </ul>
 
