--- a/sbsv2/raptor/RELEASE-NOTES.html
+++ b/sbsv2/raptor/RELEASE-NOTES.html
@@ -6,7 +6,7 @@
 
 <h1>Release Notes for Symbian Build System v2</h1>
 
-<h2>next version</h2>
+<h2>version 2.14.1</h2>
  
 <h3>Defect Fixes</h3>
 <ul>
