--- a/sbsv2/raptor/RELEASE-NOTES.html
+++ b/sbsv2/raptor/RELEASE-NOTES.html
@@ -6,6 +6,15 @@
 
 <h1>Release Notes for Symbian Build System v2</h1>
 
+<h2>version 2.15.1</h2>
+
+<h3>Defect Fixes</h3>
+<ul>
+<li><a href="http://developer.symbian.org/bugs/show_bug.cgi?id=3523">SF Bug 3523</a> - gnumakefile.flm workaround for romstuff.mke changes uses wrong output file</li>
+<li><a href="http://developer.symbian.org/bugs/show_bug.cgi?id=3374">SF Bug 3374</a> -  Issues with Raptor support for X86 prototype (2.15)</li>
+<li>Fix resource header generation - was being done for every language thus causing clashes in parallel builds</li>
+</ul>
+
 <h2>version 2.15.0</h2>
 
 <h3>New Features</h3>
