--- a/sbsv2/raptor/RELEASE-NOTES.html
+++ b/sbsv2/raptor/RELEASE-NOTES.html
@@ -6,6 +6,22 @@
 
 <h1>Release Notes for Symbian Build System v2</h1>
 
+<h2>version 2.15.2</h2>
+
+<h3>Engineering Changes</h3>
+<ul>
+<li><a href="notes/variant_cfg.txt">Allow .hrh files to be defined in XML instead of variant.cfg</a></li>
+<li><a href="notes/tools_env_vars.txt">Environment variables for tools</a></li>
+</ul>
+
+<h3>Defect Fixes</h3>
+<ul>
+<li><a href="notes/filter_html.txt">Report no-rule-to-make errors correctly in the HTML log filter</a></li>
+<li><a href="http://developer.symbian.org/bugs/show_bug.cgi?id=2412">SF Bug 2412</a> - createvmap fails when the list of source files becomes too long</li>
+<li><a href="http://developer.symbian.org/bugs/show_bug.cgi?id=2437">SF Bug 2437</a> - End-user installation script does not fully describe or report missing build dependencies (libbz2-dev, etc. needed)</li>
+<li><a href="http://developer.symbian.org/bugs/show_bug.cgi?id=3647">SF Bug 3647</a> - Raptor retains read-only attribute when exporting files</li>
+</ul>
+
 <h2>version 2.15.1</h2>
 
 <h3>Defect Fixes</h3>
